--- a/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
@@ -1,5 +1,5 @@
 [data-component="toolbar-tab"] {
-  height: 38px;
+  height: var(--lookbook-toolbar-height);
   display: flex;
   align-items: center;
   font-size: var(--lookbook-font-size-small);
