--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -1,9 +1,10 @@
-<%= lb_pane(id: dom_id(@preview)) do |pane| %>
-  <% pane.with_label do %>
-    <%= lb_breadcrumbs(@config.previews_nav_label, @preview.ancestors, @preview) %>
-  <% end %>
-
-  <%= render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_preview_page_path(@preview)) %>
-<% end %>
+<%=
+  lb_pane(id: dom_id(@preview)) do |pane|
+    pane.with_toolbar do |toolbar|
+      toolbar.with_breadcrumb(@config.previews_nav_label, @preview.ancestors, @preview)      
+    end 
+    render Lookbook::UI::PageBrowser.new(src: main_app.lookbook_render_preview_page_path(@preview))
+  end
+%>
 
 
