--- a/app/components/lookbook/ui/app/layout/layout.html.erb
+++ b/app/components/lookbook/ui/app/layout/layout.html.erb
@@ -25,28 +25,31 @@
           min_sizes: [100, 100]
         }) do |sidebar|
 
-          sidebar.with_pane("previews-nav") do |pane|
-            pane.with_toolbar do |toolbar|
-              toolbar.with_label { config.previews_nav_label }
-              toolbar.with_button_group do |group|
-                group.with_button(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'previews-nav-tree'})")
-              end
-            end
-            previews_nav
-          end
-
-          if pages_nav?
-            sidebar.with_pane("pages-nav") do |pane|
-              pane.with_toolbar do |toolbar|
-                toolbar.with_label { config.pages_nav_label }
-                toolbar.with_button_group do |group|
-                  group.with_button(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'pages-nav-tree'})")
+          config.sidebar_nav_panels.each do |name|
+            if name.to_sym == :previews
+              sidebar.with_pane("previews-nav") do |pane|
+                pane.with_toolbar do |toolbar|
+                  toolbar.with_label { config.previews_nav_label }
+                  toolbar.with_button_group do |group|
+                    group.with_button(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'previews-nav-tree'})")
+                  end
                 end
+                previews_nav
               end
-              pages_nav
+            end
+
+            if name.to_sym == :pages && pages_nav?
+              sidebar.with_pane("pages-nav") do |pane|
+                pane.with_toolbar do |toolbar|
+                  toolbar.with_label { config.pages_nav_label }
+                  toolbar.with_button_group do |group|
+                    group.with_button(icon: :copy_minus, tooltip: "Collapse all", click: "$dispatch('nav:collapse-all', {id: 'pages-nav-tree'})")
+                  end
+                end
+                pages_nav
+              end
             end
           end
-
         end 
       end
       body.with_pane { main }
