--- a/assets/css/tooltips.css
+++ b/assets/css/tooltips.css
@@ -1,1 +1,15 @@
 @import "tippy.js/dist/tippy.css";
+
+.tippy-box[data-theme~="dropdown"] {
+  box-shadow: var(--lookbook-shadow-medium);
+  background: var(--lookbook-color-base-0);
+  color: var(--lookbook-color-base-800);
+  max-width: 100%;
+  border: 1px solid var(--lookbook-divider-color);
+  border-radius: 0;
+  width: fit-content;
+
+  .tippy-content {
+    padding: 0;
+  }
+}
