--- a/app/components/lookbook/ui/elements/nav/nav.html.erb
+++ b/app/components/lookbook/ui/elements/nav/nav.html.erb
@@ -3,8 +3,8 @@
   class: {"with-filter": filter?},
   x: {
     "data": "nav('#{id}')",
-    "@lookbook:page-update.document": "updateSelection(false)",
-    "@lookbook:page-load.document": "updateSelection(true)",
+    "@page-update:complete.document": "updateSelection(false)",
+    "@page-load:complete.document": "updateSelection(true)",
     "@nav:collapse-all.document": "if ($event.detail.id == id) collapseAll()",
     "effect": "filter()"
   }) do %>
