--- a/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
+++ b/app/components/lookbook/ui/pages/page_browser/page_browser.html.erb
@@ -1,7 +1,7 @@
 <%= render component_tag(x: {
   data: "pageBrowser",
   "@message.window": "handleMessage",
-  "@lookbook:page-update-start.window": "notifyUpdateRequired"
+  "@page-update:start.window": "notifyUpdateRequired"
 }) do %>
   <iframe x-ref="iframe" src="<%= src %>" frameborder="0" seamless></iframe>
 <% end %>
