--- a/assets/css/themes/base.css
+++ b/assets/css/themes/base.css
@@ -69,11 +69,15 @@
    * Shadows
    */
 
-  --lookbook-shadow-x-small: 0 1px 2px hsl(240 3.8% 46.1% / 6%);
-  --lookbook-shadow-small: 0 1px 2px hsl(240 3.8% 46.1% / 12%);
-  --lookbook-shadow-medium: 0 2px 4px hsl(240 3.8% 46.1% / 12%);
-  --lookbook-shadow-large: 0 2px 8px hsl(240 3.8% 46.1% / 12%);
-  --lookbook-shadow-x-large: 0 4px 16px hsl(240 3.8% 46.1% / 12%);
+  --lookbook-shadow-x-small: 0 0 2px 0 rgb(0 0 0 / 0.05);
+  --lookbook-shadow-small: 0 0 3px 0 rgb(0 0 0 / 0.1),
+    0 0 2px -1px rgb(0 0 0 / 0.1);
+  --lookbook-shadow-medium: 0 0 6px -1px rgb(0 0 0 / 0.1),
+    0 0 4px -2px rgb(0 0 0 / 0.1);
+  --lookbook-shadow-large: 0 0 15px -3px rgb(0 0 0 / 0.1),
+    0 0 6px -4px rgb(0 0 0 / 0.1);
+  --lookbook-shadow-x-large: 0 0 25px -5px rgb(0 0 0 / 0.1),
+    0 0 10px -6px rgb(0 0 0 / 0.1);
 
   /*
    * Toolbars
