--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -69,11 +69,15 @@
    * Shadows
    */
 
-  --lookbook-shadow-x-small: 0 1px 2px hsla(240, 4%, 46%, 0.06);
-  --lookbook-shadow-small: 0 1px 2px hsla(240, 4%, 46%, 0.12);
-  --lookbook-shadow-medium: 0 2px 4px hsla(240, 4%, 46%, 0.12);
-  --lookbook-shadow-large: 0 2px 8px hsla(240, 4%, 46%, 0.12);
-  --lookbook-shadow-x-large: 0 4px 16px hsla(240, 4%, 46%, 0.12);
+  --lookbook-shadow-x-small: 0 0 2px 0 rgba(0, 0, 0, 0.05);
+  --lookbook-shadow-small: 0 0 3px 0 rgba(0, 0, 0, 0.1),
+    0 0 2px -1px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-medium: 0 0 6px -1px rgba(0, 0, 0, 0.1),
+    0 0 4px -2px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-large: 0 0 15px -3px rgba(0, 0, 0, 0.1),
+    0 0 6px -4px rgba(0, 0, 0, 0.1);
+  --lookbook-shadow-x-large: 0 0 25px -5px rgba(0, 0, 0, 0.1),
+    0 0 10px -6px rgba(0, 0, 0, 0.1);
 
   /*
    * Toolbars
