--- a/app/views/lookbook/inspector/panels/_metadata.html.erb
+++ b/app/views/lookbook/inspector/panels/_metadata.html.erb
@@ -9,7 +9,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>Inspector UUID</td>
+        <td>UUID</td>
         <td><%= target.uuid %></td>
       </tr>
       <tr>
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <td>Display options</td>
-        <td><%= target.display_options.to_json %></td>
+        <td><%= @display_options.to_json %></td>
       </tr>
     </tbody>
   </table>
