--- a/app/views/lookbook/previews/embed.html.erb
+++ b/app/views/lookbook/previews/embed.html.erb
@@ -5,6 +5,8 @@
     targets: @targets,
     panels: @panels,
     actions: @actions,
-    preview_params: @preview_params
+    preview_params: request.query_parameters,
+    display_options: @inspector.dynamic_display_options,
+    display_options_values: @display_options
   )
 %>
