--- a/app/views/lookbook/previews/inspect.html.erb
+++ b/app/views/lookbook/previews/inspect.html.erb
@@ -3,6 +3,8 @@
     preview: @preview,
     target: @target,
     preview_panels: @inspector.preview_panels,
-    drawer_panels: @inspector.drawer_panels
+    drawer_panels: @inspector.drawer_panels,
+    display_options: @inspector.dynamic_display_options,
+    display_options_values: @display_options
   )
 %>
