Fix embed updating on param change

--- a/app/views/lookbook/inspector/panels/_output.html.erb
+++ b/app/views/lookbook/inspector/panels/_output.html.erb
@@ -1,4 +1,4 @@
-<%= lb_inspector_panel(:code, id: dom_id(target, :output_panel), lang: :html, key: target.object_id) do %>
+<%= lb_inspector_panel(:code, id: dom_id(target, :output_panel), lang: :html, key: (target.object_id.to_s + request.query_parameters.to_json)) do %>
 <% target.scenarios_with_output do |scenario, html| %>
 <% if target.scenarios_with_output.many? %>
 <%= code_comment(:html, scenario.label) %>
