--- a/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
@@ -34,7 +34,7 @@
               end
             end
             toolbar.with_button_group do |group|
-              group.with_button(icon: :external_link, tooltip: "Open preview in new window", href: target.preview_path, target: "_blank")
+              group.with_button(icon: :external_link, tooltip: "Open preview in new window", href: preview_url, target: "_blank")
             end
           end
 
