--- a/app/views/lookbook/inspector/panels/_preview.html.erb
+++ b/app/views/lookbook/inspector/panels/_preview.html.erb
@@ -1,3 +1,3 @@
-<%= lb_inspector_panel(id: dom_id(target, :preview_panel), key: target.object_id) do %>
+<%= lb_inspector_panel(id: dom_id(target, :preview_panel), key: (target.object_id.to_s + request.query_parameters.to_json)) do %>
   <%= lb_viewport(target.preview_path(request.query_parameters), id: "preview-viewport") %>
 <% end %>
